<resources>
    <string name="app_name">dostyk</string>


    <!--    Bottom Navigation-->
    <string name="bottom_navigation_home">Главная</string>
    <string name="bottom_navigation_restaurants">Рестонары</string>
    <string name="bottom_navigation_qr">QR</string>
    <string name="bottom_navigation_history">История</string>
    <string name="bottom_navigation_profile">Профиль</string>


    <!--    Buttons Text-->
    <string name="add_card">Добавить карту</string>
    <string name="btn_go_to_pay">Перейти к оплате</string>
    <string name="close">Закрыть</string>
    <string name="btn_pay">Оплатить</string>
    <string name="btn_g_pay">Google pay</string>
    <string name="btn_continue">Продолжить</string>
    <string name="btn_sign_in">Войти</string>
    <string name="btn_sign_up">Зарегистрироваться</string>
    <string name="btn_sign_up_title">Регистрация</string>
    <string name="e_mail_text">E-Mail</string>
    <string name="password_text">Password</string>

    <!--   Page Texts-->
    <string name="user_cards">Мои карты</string>
    <string name="user_doesnt_have_cards">У вас нет добавленных карт</string>
    <string name="user_main_card">Основная карта</string>
    <string name="payment_via_qr">Оплата QR</string>

    <!--   Toast Texts-->
    <string name="text_is_blank">Заполните все поля</string>
    <string name="text_email_or_password_wrong">Логин или пароль были введены неверно</string>


    <!--    Profile Page-->
    <string name="user_name_example">Алдияр</string>
    <string name="phone_number_example">+7 111 111 11 11</string>

    <string name="notofication_page_title">Уведомления</string>
    <string name="notofication_page_date_title">10 Октября</string>

    <string name="order_history">История заказов</string>
    <string name="user_data">Мои данные</string>

    <string name="payment_methods">Способы оплаты</string>
    <string name="user_dont_have_cards">У вас нет сохраненной карты</string>

    <string name="support_service">Служба поддержки</string>
    <string name="support_service_faq">FAQ</string>

    <string name="about_company">О компании</string>


    <!--    About Company-->
    <string name="about_company_page_app_text_1">Dostyk - приложение, позволяющее получать бонусы за каждый заказ у наших партнеров ресторанов.</string>
    <string name="about_company_page_app_text_2">Приложение Dostyk объединяет единую экосистему лояльности более 400 ресторанов.</string>

    <string name="about_company_page_user_agreement">Пользовательское соглашение</string>

    <string name="about_company_page_offer">Оферта</string>

    <string name="about_company_page_privacy_policy">Политика конфиденциальности</string>


    <!--    Add Card Bottom sheet-->
    <string name="card_holder_number">Номер карты</string>
    <string name="card_holder_expiration_date">Срок годности</string>
    <string name="card_holder_ccv">CCV</string>
    <string name="card_holder_name">Имя владельца карты</string>


    <!--    Restaurant page-->
    <string name="restaurant_type_description">Бар</string>
    <string name="restaurant_type_name">Alma Wine</string>
    <string name="restaurant_description">#138 · Заказ от 23 августа, 17:14</string>
    <string name="restaurant_type_bonuses">Бонусы</string>
    <string name="restaurant_type_bonuses_count">1500</string>
    <string name="restaurant_work_hours">10:00–22:30</string>
    <string name="restaurant_address_title">ул. Достык 98</string>
    <string name="restaurant_address_text">ул. Достык 98</string>
    <string name="restaurant_address_how_far">600м</string>
    <string name="restaurant_description_title">Описание</string>
    <string name="restaurant_description_text">Ресторан "Alma Wine" вобрал в себя лучшие традиции европейской, испанской и средиземноморской кухни. Уютная, доброжелательная атмосфера и достойный сервис - это основные преимущества ресторана.</string>
    <string name="restaurant_description_news_and_events_title">Новости и акции</string>
    <string name="restaurant_description_mega_events_title">Мега акция</string>
    <string name="restaurant_description_news_and_events_all">Все</string>
    <string name="restaurant_description_news_and_events_text">Дегустация вин каждый вторник</string>
    <string name="restaurant_description_map_title">Карта</string>

    <!--    History page-->
    <string name="history_dishes_in_order">Блюда в заказе</string>
    <string name="history_payment_in_order">Оплата</string>
    <string name="history_bonus_in_order">Бонусы</string>
    <string name="history_details_page_title">Заказ 138</string>

    <!--    QR page-->
    <string name="qr_page_text">Наведите камеру на QR-код, чтобы оплатить</string>
    <string name="qr_page_title">Оплата через QR-код</string>
    <string name="qr_page_details_page_bonus_cap_text">Бонусы к начислению</string>
    <string name="qr_page_details_page_bonus_cap_count">+120 ₸</string>
    <string name="qr_page_details_page_bill_text">Итого к оплате</string>
    <string name="qr_page_details_page_bill_amount">26 653 ₸</string>
    <string name="qr_page_choose_payment_method_dialog_title">Выберите способ оплаты</string>
    <string name="payment_result_success_text">Оплата прошла успешно</string>
    <string name="payment_result_failure_text">Произошла ошибка. Повторите попытку</string>

    <!--    Home page-->
    <string name="home_page_see_all">Показать все</string>
    <string name="home_page_top_brands_title">Топовые бренды</string>
    <string name="home_page_new_places_title">Новые заведения</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>