<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_restaurant_type"
        style="@style/TextAppearance.FilterHeading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="13sp"
        android:text="@string/restaurant_type_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_restaurant_name"
        style="@style/TextAppearance.Dostyk.Body"
        android:textFontWeight="600"
        android:layout_width="0dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_type_name"
        app:layout_constraintStart_toStartOf="@+id/tv_restaurant_type"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_type"/>

    <ImageView
        android:id="@+id/ic_divider_restaurant_details"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:src="@drawable/ic_divider_restaurant_details"
        app:layout_constraintBottom_toBottomOf="@+id/tv_restaurant_name"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/tv_restaurant_name"
        app:layout_constraintTop_toTopOf="@+id/tv_restaurant_type" />

    <TextView
        android:id="@+id/tv_restaurant_bonuses"
        style="@style/TextAppearance.FilterHeading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:text="@string/restaurant_type_bonuses"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sparkles_restaurant_details"
        app:layout_constraintBottom_toBottomOf="@+id/tv_restaurant_bonuses_count"
        app:layout_constraintEnd_toStartOf="@+id/tv_restaurant_bonuses_count"
        app:layout_constraintTop_toTopOf="@+id/tv_restaurant_bonuses_count" />

    <TextView
        android:id="@+id/tv_restaurant_bonuses_count"
        style="@style/TextAppearance.FilterHeading2"
        android:layout_width="0dp"
        android:textColor="@color/green_txt"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_type_bonuses_count"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/ic_bonuses_next"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_bonuses"/>

    <ImageView
        android:id="@+id/ic_bonuses_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right_green"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_bonuses"/>


    <ImageView
        android:id="@+id/ic_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clock"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_name" />

    <TextView
        android:id="@+id/tv_restaurant_work_hours"
        style="@style/TextAppearance.Dostyk.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/restaurant_work_hours"
        android:textFontWeight="600"
        app:layout_constraintBottom_toBottomOf="@+id/ic_clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_clock"
        app:layout_constraintTop_toTopOf="@+id/ic_clock" />


    <ImageView
        android:id="@+id/ic_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_map"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_clock" />

    <TextView
        android:id="@+id/tv_restaurant_address"
        style="@style/TextAppearance.Dostyk.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/restaurant_address_title"
        android:textFontWeight="600"
        app:layout_constraintBottom_toBottomOf="@+id/ic_map"
        app:layout_constraintEnd_toStartOf="@+id/tv_restaurant_address_how_far"
        app:layout_constraintStart_toEndOf="@+id/ic_map"
        app:layout_constraintTop_toTopOf="@+id/ic_map" />

    <TextView
        android:id="@+id/tv_restaurant_address_how_far"
        style="@style/TextAppearance.FilterHeading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/restaurant_address_how_far"
        app:layout_constraintBottom_toBottomOf="@+id/tv_restaurant_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_restaurant_address" />

    <TextView
        android:id="@+id/tv_restaurant_description_title"
        style="@style/TextAppearance.FilterHeading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/restaurant_description_title"
        android:textFontWeight="600"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_restaurant_description_text"
        style="@style/TextAppearance.FilterHeading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:text="@string/restaurant_description_text"
        android:textFontWeight="600"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_description_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>