<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog"
    android:paddingBottom="40dp">


    <ImageView
        android:id="@+id/iv_add_new_card_dialog_top_dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dialog_top_dash"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_cancel_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cancel"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_add_card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/add_card"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cancel_icon" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_mapping_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_card_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/et_card_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray_background"
            android:padding="14dp"
            android:maxLength="16"
            android:maxLines="1"
            android:inputType="number"
            android:hint="@string/card_holder_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_card_expired_date"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@color/gray_background"
            android:padding="14dp"
            android:maxLines="1"
            android:maxLength="5"
            android:inputType="number"
            android:hint="@string/card_holder_expiration_date"
            app:layout_constraintBottom_toBottomOf="@+id/et_card_ccv_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_card_ccv_code" />

        <EditText
            android:id="@+id/et_card_ccv_code"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@color/gray_background"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:maxLength="3"
            android:inputType="number"
            android:hint="@string/card_holder_ccv"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_card_number" />

        <EditText
            android:id="@+id/et_card_holder_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray_background"
            android:padding="14dp"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:hint="@string/card_holder_name"
            app:layout_constraintTop_toBottomOf="@+id/et_card_ccv_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/user_main_card"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/is_user_main_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_mapping_area" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/is_user_main_card"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        app:showText="true"
        android:textOn="On"
        android:textOff="Off"
        app:track="@drawable/custom_switch_track"
        android:thumb="@drawable/custom_switch_thumb"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>