<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.restaurant.details.RestaurantSuperEventFragment">


    <include
        android:id="@+id/base_page_title_view_layout"
        layout="@layout/base_page_title_view"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_restaurant_super_event"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/black"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/base_page_title_view_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_restaurant_super_event_date"
        style="@style/TextAppearance.FilterHeading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="13sp"
        android:text="@string/restaurant_work_hours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_restaurant_super_event"/>

    <TextView
        android:id="@+id/tv_restaurant_super_event_title"
        style="@style/TextAppearance.Dostyk.Body"
        android:textFontWeight="600"
        android:layout_width="0dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_type_name"
        app:layout_constraintStart_toStartOf="@+id/tv_restaurant_super_event_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_super_event_date"/>


    <TextView
        android:id="@+id/tv_restaurant_super_event_text"
        style="@style/TextAppearance.FilterHeading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:text="@string/restaurant_description_text"
        android:textFontWeight="400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_super_event_title" />

</androidx.constraintlayout.widget.ConstraintLayout>