<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog"
    tools:context=".ui.qr.dialog.ConfirmPaymentDialogFragment">


    <ImageView
        android:id="@+id/iv_add_new_card_dialog_top_dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dialog_top_dash"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_cancel_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cancel"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/tv_payment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/history_payment_in_order"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_cancel_icon"
        app:layout_constraintEnd_toStartOf="@+id/iv_cancel_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_cancel_icon" />

    <include
        android:id="@+id/about_company_tab"
        layout="@layout/list_item_page_details"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_payment_title"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/payment_bonus_cap_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_company_tab">

        <TextView
            android:id="@+id/tv_bonus_cap"
            style="@style/TextAppearance.FilterHeading1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="24dp"
            android:text="@string/qr_page_details_page_bonus_cap_text"
            android:textAlignment="textStart"
            android:textColor="@color/green_txt"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_amount"
            style="@style/TextAppearance.Dostyk.Heading4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="24dp"
            android:text="@string/qr_page_details_page_bonus_cap_count"
            android:textColor="@color/green_txt"
            android:textFontWeight="600"
            android:textSize="15sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/tv_bonus_cap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_bonus_cap" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/order_bill_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_bonus_cap_layout">


        <TextView
            android:id="@+id/tv_order_bill_text"
            style="@style/TextAppearance.FilterHeading1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="24dp"
            android:text="@string/qr_page_details_page_bill_text"
            android:textAlignment="textStart"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_order_bill_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_order_bill_amount"
            style="@style/TextAppearance.Dostyk.Heading4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="24dp"
            android:text="@string/qr_page_details_page_bill_amount"
            android:textFontWeight="600"
            android:textSize="15sp"
            android:textColor="@color/gray_txt"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/tv_order_bill_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_order_bill_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pay"
        style="@style/MainButtonInactive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/raleway_bold"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/btn_pay"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_bill_layout" />




</androidx.constraintlayout.widget.ConstraintLayout>